add postgresql, change products and users repo
